# WASM-Conway-game-of-life

./: Cargo.toml  LICENSE  README.md  functions.js  index.css  index.html
src/: game.rs  lib.rs
