[package]
name = "wasm-game-of-life"
version = "0.1.0"
edition = "2021"
authors = ["Romain Viry <rom88.viry@gmail.com>"]
description = "WASM package that play conway game of life on your web browser" 
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8.5"
num-traits = "0.2"
wasm-bindgen = "0.2.74"
js-sys = "0.3.57"
thread_local = "1.1.4"

[dependencies.web-sys]
version = "0.3.57"
features = [
  "Document", "Element", "HtmlElement", "Window", "console",
  "CssStyleDeclaration", "HtmlDivElement", "KeyboardEvent", "Document" 
]